# python_programs

./: README.md
1_prime_number/: main.py
fibonacci_series/: README.md  fibonacci_series.py  pyproject.toml  test_module.py
prime_number/: README.md  isPrime.py  is_prime.py  main.py  pyproject.toml  test_module.py
